# machina-ratiocinatrix

./: .env_example  LICENSE  README.md  pyproject.toml
manual_tests/: example.yml  manual_start.py
src/machina_ratiocinatrix/: __init__.py  cli.py  config.py  githf.py  machina.yaml  main.py  start_stop.py
src/machina_ratiocinatrix/machina/: machina.yaml
src/machina_ratiocinatrix/providers/: openai.py
src/package_name/: cli.py  main.py
