[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "machina-ratiocinatrix"
version = "0.0.10"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Machina Ratiocinatrix"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["machina-raticinatrix"]

dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
machina = "machina_ratiocinatrix.cli:run"

[project.urls]
"Homepage" = "https://github.com/machina-ratiocinatrix/machina-ratiocinatrix"